# azure-iot-sdk-c

./: .gitignore  CMakeLists.txt
build_all/ios/: iOS.cmake
build_all/linux/: build.sh
iothub_client/: CMakeLists.txt
iothub_client/inc/: iothubtransport_amqp_messenger.h  iothubtransport_amqp_telemetry_messenger.h
iothub_client/samples/iothub_client_sample_amqp/: CMakeLists.txt
iothub_client/samples/iothub_client_sample_amqp_shared/: CMakeLists.txt
iothub_client/samples/iothub_client_sample_amqp_shared_ws_methods/: CMakeLists.txt
iothub_client/samples/iothub_client_sample_amqp_websockets/: CMakeLists.txt
iothub_client/samples/iothub_client_sample_amqp_websockets_shared/: CMakeLists.txt
iothub_client/samples/iothub_client_sample_device_method/: CMakeLists.txt
iothub_client/samples/iothub_client_sample_device_twin/: CMakeLists.txt
iothub_client/samples/iothub_client_sample_http/: CMakeLists.txt
iothub_client/samples/iothub_client_sample_http_shared/: CMakeLists.txt
iothub_client/samples/iothub_client_sample_mqtt_esp8266/: CMakeLists.txt
iothub_client/samples/iothub_client_sample_upload_to_blob/: CMakeLists.txt
iothub_client/samples/iothub_client_sample_upload_to_blob_mb/: CMakeLists.txt
iothub_client/src/: iothubtransport_amqp_common.c  iothubtransport_amqp_device.c  iothubtransport_amqp_twin_messenger.c  iothubtransport_mqtt_common.c  iothubtransportamqp_methods.c
iothub_client/tests/: CMakeLists.txt
iothub_service_client/: CMakeLists.txt
iothub_service_client/inc/: iothub_message_monitoring.h  iothub_message_monitoring_ll.h
iothub_service_client/src/: iothub_message_monitoring.c  iothub_message_monitoring_ll.c
jenkins/: osx_xcode_native.sh
provisioning_service_client/: CMakeLists.txt
provisioning_service_client/inc/: provisioning_sc_attestation_mechanism.h  provisioning_sc_bulk_operation.h  provisioning_sc_device_registration_state.h  provisioning_sc_enrollment.h  provisioning_sc_json.h  provisioning_sc_json_const.h  provisioning_sc_models.h  provisioning_sc_models_internal.h  provisioning_sc_models_serializer.h  provisioning_sc_private_utility.h  provisioning_sc_tpm_attestation.h  provisioning_sc_twin.h  provisioning_sc_x509_attestation.h  provisioning_service_client.h
provisioning_service_client/samples/: CMakeLists.txt  readme.md
provisioning_service_client/src/: provisioning_sc_attestation_mechanism.c  provisioning_sc_bulk_operation.c  provisioning_sc_device_registration_state.c  provisioning_sc_enrollment.c  provisioning_sc_private_utility.c  provisioning_sc_tpm_attestation.c  provisioning_sc_twin.c  provisioning_sc_x509_attestation.c  provisioning_service_client.c
provisioning_service_client/tests/: CMakeLists.txt
serializer/: CMakeLists.txt
serializer/samples/devicetwin_simplesample/: CMakeLists.txt
serializer/samples/simplesample_mqtt/: CMakeLists.txt
(+77 files in other folders)
